Set Java to 21+ and enable ZGC